--- a/distributed-setup/hdfs/radar-cp-stack/docker-compose.yml
+++ b/distributed-setup/hdfs/radar-cp-stack/docker-compose.yml
@@ -421,6 +421,7 @@ services:
     networks:
       - zookeeper
       - kafka
+      - default
     depends_on:
       - zookeeper-1
       - zookeeper-2
