--- a/distributed-setup/hdfs/scripts/init.cfg
+++ b/distributed-setup/hdfs/scripts/init.cfg
@@ -3,6 +3,11 @@
 repo_update: true
 repo_upgrade: all
 
+manage_resolv_conf: true
+
+resolv_conf:
+  nameservers: ['8.8.4.4', '8.8.8.8']
+
 apt:
   preserve_sources_list: true
 
